--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-jaid",
   "private": true,
-  "version": "1.3.1",
+  "version": "1.4.0",
   "author": {
     "name": "Jaid",
     "url": "https://github.com/jaid",
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^5.12.0",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
