--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-jaid",
   "private": true,
-  "version": "1.7.0",
+  "version": "1.8.0",
   "author": {
     "name": "Jaid",
     "url": "https://github.com/jaid",
@@ -44,7 +44,8 @@
     "eslint-plugin-optimize-regex": "^1.1.6",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-unicorn": "^6.0.1"
+    "eslint-plugin-unicorn": "^6.0.1",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.4.0"
   },
   "workspaces": [
     "build/*"
