Changed all ERRORs to WARNs

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -1,24 +1,24 @@
 array-callback-return: WARN
 callback-return: WARN
-constructor-super: ERROR
-eqeqeq: [ERROR, smart]
+constructor-super: WARN
+eqeqeq: [WARN, smart]
 getter-return: WARN
 no-alert: WARN
-no-buffer-constructor: ERROR
-no-caller: ERROR
-no-class-assign: ERROR
+no-buffer-constructor: WARN
+no-caller: WARN
+no-class-assign: WARN
 no-compare-neg-zero: WARN
 no-cond-assign: WARN
-no-const-assign: ERROR
-no-delete-var: ERROR
-no-dupe-args: ERROR
-no-dupe-class-members: ERROR
-no-dupe-keys: ERROR
-no-duplicate-case: ERROR
+no-const-assign: WARN
+no-delete-var: WARN
+no-dupe-args: WARN
+no-dupe-class-members: WARN
+no-dupe-keys: WARN
+no-duplicate-case: WARN
 no-empty-character-class: WARN
 no-empty-pattern: WARN
-no-eval: ERROR
-no-ex-assign: ERROR
+no-eval: WARN
+no-ex-assign: WARN
 no-extra-bind: WARN
 no-extra-boolean-cast: WARN
 no-extra-label: WARN
@@ -27,31 +27,31 @@ no-func-assign: WARN
 no-global-assign: WARN
 no-implicit-coercion: WARN
 no-inner-declarations: WARN
-no-invalid-regexp: ERROR
+no-invalid-regexp: WARN
 no-irregular-whitespace: WARN
-no-iterator: ERROR
+no-iterator: WARN
 no-label-var: WARN
-no-mixed-requires: ERROR
+no-mixed-requires: WARN
 no-multi-spaces: WARN
-no-multi-str: ERROR
+no-multi-str: WARN
 no-new: WARN
-no-new-func: ERROR
-no-new-require: ERROR
-no-new-symbol: ERROR
+no-new-func: WARN
+no-new-require: WARN
+no-new-symbol: WARN
 no-obj-calls: WARN
-no-octal: ERROR
-no-path-concat: ERROR
+no-octal: WARN
+no-path-concat: WARN
 no-proto: WARN
 no-redeclare: WARN
 no-regex-spaces: WARN
-no-return-await: ERROR
-no-self-assign: ERROR
-no-self-compare: ERROR
-no-sequences: ERROR
+no-return-await: WARN
+no-self-assign: WARN
+no-self-compare: WARN
+no-sequences: WARN
 no-shadow: WARN
 no-sparse-arrays: WARN
-no-this-before-super: ERROR
-no-throw-literal: ERROR
+no-this-before-super: WARN
+no-throw-literal: WARN
 no-unexpected-multiline: WARN
 no-unreachable: WARN
 no-unsafe-finally: WARN
@@ -65,7 +65,7 @@ no-useless-constructor: WARN
 no-useless-escape: WARN
 no-useless-rename: WARN
 no-useless-return: WARN
-no-var: ERROR
+no-var: WARN
 no-void: WARN
 object-shorthand: WARN
 prefer-destructuring:
@@ -78,6 +78,6 @@ radix: WARN
 require-await: WARN
 require-yield: WARN
 semi: [WARN, never]
-use-isnan: ERROR
+use-isnan: WARN
 valid-typeof: WARN
-yoda: ERROR
+yoda: WARN
