--- a/src/rules/jsx.yml
+++ b/src/rules/jsx.yml
@@ -12,7 +12,7 @@ react/jsx-max-props-per-line:
   - maximum: 1
     when: multiline
 react/jsx-no-duplicate-props: WARN
-react/jsx-no-target-blank: ERROR
+react/jsx-no-target-blank: WARN
 react/jsx-no-undef:
   - WARN
   - allowGlobals: true
@@ -23,5 +23,5 @@ react/jsx-tag-spacing:
     beforeClosing: never
     beforeSelfClosing: never
     closingSlash: never
-react/jsx-uses-react: ERROR
-react/jsx-uses-vars: ERROR
+react/jsx-uses-react: WARN
+react/jsx-uses-vars: WARN
