--- a/src/rules/style.yml
+++ b/src/rules/style.yml
@@ -8,7 +8,13 @@ arrow-parens: [WARN, as-needed]
 arrow-spacing: WARN
 block-spacing: WARN
 brace-style: WARN
-comma-dangle: [WARN, always-multiline]
+comma-dangle:
+  - WARN
+  - arrays: always-multiline
+    objects: always-multiline
+    imports: never
+    exports: never
+    functions: never
 comma-spacing: WARN
 comma-style: WARN
 computed-property-spacing: WARN
