--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "version": "1.10.0",
+  "version": "1.11.0",
   "scripts": {
     "build": "cross-env babel-node ./src/build.js",
     "release": "npm run build && foreach -g \"build/*\" -x \"npm publish build/#{base}\"",
@@ -9,6 +9,11 @@
   },
   "peerDependencies": {
     "eslint": "^5.12.0"
+  },
+  "babel": {
+    "presets": [
+      "jaid"
+    ]
   },
   "eslintConfig": {
     "extends": "jaid"
@@ -20,16 +25,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-pipeline-operator": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
     "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
     "emp": "^2.0.0",
     "eslint": "^5.12.1",
-    "eslint-config-jaid": "^1.9.0",
+    "eslint-config-jaid": "^1.10.0",
     "eslint-find-rules": "^3.3.1",
+    "babel-preset-jaid": "2.8.0",
     "filter-obj": "^1.1.0",
     "foreach-cli": "^1.8.1",
     "fs-extra": "^7.0.1",
@@ -37,16 +39,16 @@
     "list-dir-content-size": "^0.0.5",
     "lodash": "^4.17.11",
     "pretty-bytes": "^5.1.0",
-    "publishimo": "^3.2.0",
+    "publishimo": "^3.5.2",
     "sort-keys": "^2.0.0"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint-plugin-import": "^2.14.0",
+    "babel-eslint": "11.0.0-beta.0",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-optimize-regex": "^1.1.6",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-unicorn": "^7.0.0",
+    "eslint-plugin-unicorn": "^7.1.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.4.0"
   }
 }
