--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "eslintConfig": {
     "extends": "jaid"
   },
-  "peerDependencies": {
-    "eslint": "^5.14.1"
-  },
   "dependencies": {
     "babel-eslint": "11.0.0-beta.0",
+    "eslint": "^5.14.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-optimize-regex": "^1.1.6",
     "eslint-plugin-promise": "^4.0.1",
