--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "js-yaml": "^3.13.1",
     "list-dir-content-size": "^0.0.5",
     "lodash": "^4.17.11",
-    "opn-cli": "^5.0.0",
+    "open-cli": "^5.0.0",
     "pretty-bytes": "^5.2.0",
     "publishimo": "^5.0.3",
     "sort-keys": "^3.0.0"
   },
   "scripts": {
     "build": "cross-env babel-node ./src/build.js",
-    "release": "npm run build && cross-env git tag v$npm_package_version && git push --tags && cross-env opn https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version && foreach -g \"build/*\" -x \"npm publish build/#{base}\"",
+    "release": "npm run build && cross-env git tag v$npm_package_version && git push --tags && cross-env open-cli https://github.com/$npm_package_author_name/$(basename $PWD)/releases/new?tag=v$npm_package_version && foreach -g \"build/*\" -x \"npm publish build/#{base}\"",
     "unused-rules": "npm run build && cross-env eslint-find-rules --unused ./build/react/index.json"
   }
 }
