--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.4.0"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
     "babel-preset-jaid": "6.2.0",
     "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
