Automatically updated boilerplate (.gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -2,24 +2,29 @@
 .env
 
 # Node packages
-/node_modules/
-
-# Yarn
-/yarn.lock
-/yarn-error.log
+node_modules
 
 # npm
-#/package-lock.json
-/npm-debug.log
-/npm-debug.log.*
+package-lock.json
+!/package-lock.json
+npm-debug.log
+npm-debug.log.*
+.npmrc
+/report.*.json
 
 # pnpm
-/shrinkwrap.yaml
-/pnpm-debug.log
+shrinkwrap.yaml
+!/shrinkwrap.yaml
+pnpm-debug.log
+
+# Yarn
+yarn.lock
+!/yarn.lock
+yarn-error.log
 
 # Generated or temporary content
-/build/
-/dist/
+dist
+temp
 
 # IDEs
 /.vscode/
