feat: Added rule `no-undef`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -79,6 +79,7 @@ semi: [WARN, never]
 use-isnan: WARN
 valid-typeof: WARN
 yoda: WARN
+no-undef: WARN
 no-undef-init: WARN
 no-return-assign:
   - WARN
