--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "extends": "jaid"
   },
   "dependencies": {
-    "babel-eslint": "11.0.0-beta.0",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-optimize-regex": "^1.1.6",
