feat: Added some `eslint-plugin-unicorn` rules
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/unicorn-web.yml
+++ b/src/rules/unicorn-web.yml
@@ -1,3 +1,4 @@
 unicorn/prefer-query-selector: WARN
 unicorn/prefer-node-append: WARN
 unicorn/prefer-node-remove: WARN
+unicorn/prefer-dataset: WARN
