feat: Added `eslint-plugin-simple-import-sort`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -1,11 +1,11 @@
-import/order:
-  - WARN
-  - groups:
-    - builtin
-    - external
-    - [internal, parent]
-    - [index, sibling]
-    newlines-between: always
+# import/order:
+#   - WARN
+#   - groups:
+#     - builtin
+#     - external
+#     - [internal, parent]
+#     - [index, sibling]
+#     newlines-between: always
 import/newline-after-import: WARN
 import/first: WARN
 import/no-duplicates: WARN
