--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-optimize-regex": "^1.1.7",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
     "eslint-plugin-unicorn": "^14.0.1",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.8.0"
   },
