feat: Added `unicorn/eslint-plugin-unicorn`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/unicorn-web.yml
+++ b/src/rules/unicorn-web.yml
@@ -2,3 +2,4 @@ unicorn/prefer-query-selector: WARN
 unicorn/prefer-node-append: WARN
 unicorn/prefer-node-remove: WARN
 unicorn/prefer-dataset: WARN
+unicorn/eslint-plugin-unicorn: WARN
