manage: Added repository link to `package.json`

--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   },
   "name": "eslint-config-jaid",
   "description": "Personal ESLint preset. Intentionally ugly to write code that looks like I feel.",
-  "funding": "https://github.com/sponsors/jaid"
+  "funding": "https://github.com/sponsors/jaid",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jaid/eslint-config-jaid"
+  }
 }
