feat: Disabled rule `you-dont-need-lodash-underscore/omit`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/lodash.yml
+++ b/src/rules/lodash.yml
@@ -1,3 +1,4 @@
 you-dont-need-lodash-underscore/last: OFF
 you-dont-need-lodash-underscore/uniq: OFF
 you-dont-need-lodash-underscore/is-nil: OFF
+you-dont-need-lodash-underscore/omit: OFF
