--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -17,4 +17,4 @@ unicorn/prefer-includes: WARN
 unicorn/prefer-string-slice: WARN
 unicorn/consistent-function-scoping: WARN
 unicorn/expiring-todo-comments: WARN
-unicorn/prefer-replace-all: WARN
+# unicorn/prefer-replace-all: WARN # TODO: Enable again later when String.replaceAll is better supported
