--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -18,3 +18,4 @@ unicorn/prefer-string-slice: WARN
 unicorn/consistent-function-scoping: WARN
 unicorn/expiring-todo-comments: WARN
 # unicorn/prefer-replace-all: WARN # TODO: Enable again later when String.replaceAll is better supported
+unicorn/prefer-number-properties: WARN
