--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -19,3 +19,5 @@ unicorn/consistent-function-scoping: WARN
 unicorn/expiring-todo-comments: WARN
 # unicorn/prefer-replace-all: WARN # TODO: Enable again later when String.replaceAll is better supported
 unicorn/prefer-number-properties: WARN
+unicorn/no-useless-undefined: WARN
+unicorn/prefer-array-find: WARN
