--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "open-cli": "^6.0.1",
     "pretty-bytes": "^5.3.0",
     "publishimo": "^5.0.6",
-    "sort-keys": "^4.0.0"
+    "sort-keys": "^4.0.0",
+    "tsconfig-jaid": "^2.0.1"
   },
   "scripts": {
     "build": "cross-env babel-node ./src/build.js",
