--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -2,22 +2,31 @@ unicorn/catch-error-name: WARN
 unicorn/throw-new-error: WARN
 unicorn/number-literal-case: WARN
 unicorn/escape-case: WARN
-unicorn/no-array-instanceof: WARN
+unicorn/no-instanceof-array: WARN
 unicorn/no-new-buffer: ERROR
 unicorn/no-hex-escape: WARN
-unicorn/prefer-starts-ends-with: WARN
+unicorn/prefer-string-starts-ends-with: WARN
 unicorn/prefer-type-error: WARN
 unicorn/new-for-builtins: WARN
 unicorn/prefer-spread: WARN
 unicorn/error-message: WARN
 unicorn/prefer-add-event-listener: WARN
 unicorn/prefer-exponentiation-operator: WARN
-unicorn/prefer-flat-map: WARN
+unicorn/prefer-array-flat-map: WARN
 unicorn/prefer-includes: WARN
 unicorn/prefer-string-slice: WARN
 unicorn/consistent-function-scoping: WARN
 unicorn/expiring-todo-comments: WARN
-# unicorn/prefer-replace-all: WARN # TODO: Enable again later when String.replaceAll is better supported
+unicorn/prefer-string-replace-all: WARN # TODO: Maybe disable again if I need to work with an environment that doesn't support replaceAll yet
 unicorn/prefer-number-properties: WARN
 unicorn/no-useless-undefined: WARN
 unicorn/prefer-array-find: WARN
+unicorn/numeric-separators-style: WARN
+unicorn/prefer-math-trunc: ERROR
+unicorn/prefer-date-now: ERROR
+unicorn/prefer-string-trim-start-end: WARN
+unicorn/no-new-array: WARN
+unicorn/prefer-array-index-of: WARN
+unicorn/prefer-regexp-test: WARN
+unicorn/no-array-for-each: WARN
+unicorn/prefer-array-flat: WARN
