--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "filter-obj": "^2.0.1",
     "foreach-cli": "^1.8.1",
     "fs-extra": "^9.0.1",
+    "jest": "^26.6.3",
     "js-yaml": "^4.1.0",
     "list-dir-content-size": "^0.0.5",
     "lodash": "^4.17.20",
@@ -46,7 +47,7 @@
     "build": "cross-env babel-node ./src/build.js",
     "release": "npm run build && foreach -g \"dist/build/*\" -x \"npm publish dist/build/#{base}\"",
     "unused-rules": "npm run build && cross-env eslint-find-rules --unused dist/build/react/index.json",
-    "test": "echo No test specified!"
+    "test": "NODE_ENV=production jest"
   },
   "name": "eslint-config-jaid",
   "description": "Personal ESLint preset. Intentionally ugly to write code that looks like I feel.",
