--- a/src/rules/lodash.yml
+++ b/src/rules/lodash.yml
@@ -2,3 +2,4 @@ you-dont-need-lodash-underscore/last: OFF
 you-dont-need-lodash-underscore/uniq: OFF
 you-dont-need-lodash-underscore/is-nil: OFF
 you-dont-need-lodash-underscore/omit: OFF
+you-dont-need-lodash-underscore/is-string: OFF
