--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "extends": "jaid"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.14.4",
     "eslint": "^7.27.0",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "^11.1.0",
