--- a/src/rules/unicorn-web.yml
+++ b/src/rules/unicorn-web.yml
@@ -5,3 +5,4 @@ unicorn/prefer-dataset: WARN
 unicorn/prefer-modern-dom-apis: WARN
 unicorn/prefer-dom-node-text-content: WARN
 unicorn/prefer-keyboard-event-key: WARN
+unicorn/no-invalid-remove-event-listener: WARN
