improve: Migrated from eslint-plugin-optimize-regex to unicorn/better-regex
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -33,3 +33,4 @@ unicorn/prefer-array-flat: WARN
 unicorn/no-useless-length-check: WARN
 unicorn/no-useless-spread: WARN
 unicorn/no-useless-fallback-in-spread: WARN
+unicorn/better-regex: WARN
