--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "version": "1.56.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
   "license": "MIT",
-  "babel": {
-    "presets": [
-      "jaid"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "jaid"
-  },
   "dependencies": {
     "@babel/eslint-parser": "^7.15.7",
+    "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
@@ -25,6 +18,7 @@
     "babel-preset-jaid": "14.0.0",
     "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
+    "debug": "^4.3.2",
     "emp": "^2.0.0",
     "eslint-config-jaid": "^1.56.0",
     "eslint-find-rules": "^3.6.1",
