--- a/src/rules/simple-import-sort.yml
+++ b/src/rules/simple-import-sort.yml
@@ -2,6 +2,7 @@ simple-import-sort/imports:
   - WARN
   - groups:
     - ["^\\u0000"] # Side effects
+    - ["^@jest/globals$"] # Jest globals
     - ["^node:"] # Node builtins, see https://nodejs.org/api/esm.html#esm_node_imports
     - ["^@?\\w"] # Packages
     - ["^lib/", "^components/"] # lib/, components/
