--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -6,3 +6,4 @@ import/no-deprecated: WARN
 import/no-useless-path-segments: WARN
 import/no-self-import: WARN
 import/no-absolute-path: WARN
+import/no-unresolved: WARN
