--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -7,3 +7,6 @@ import/no-useless-path-segments: WARN
 import/no-self-import: WARN
 import/no-absolute-path: WARN
 import/no-unresolved: ERROR
+import/extensions:
+  - ERROR
+  - ignorePackages
