feat: Added rule node/file-extension-in-import
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/node.yml
+++ b/src/rules/node.yml
@@ -2,3 +2,4 @@ node/no-mixed-requires: WARN
 node/no-new-require: WARN
 node/no-path-concat: WARN
 node/no-sync: WARN
+node/file-extension-in-import: ERROR
