fix: Fixed import/no-unresolved errors for “node:” and Webpack imports
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/import.yml
+++ b/src/rules/import.yml
@@ -6,4 +6,6 @@ import/no-deprecated: WARN
 import/no-useless-path-segments: WARN
 import/no-self-import: WARN
 import/no-absolute-path: WARN
-import/no-unresolved: ERROR
+import/no-unresolved:
+  - ERROR
+  - ignore: ["^node:", ^!]
