feat: Added new rules `unicorn/prefer-code-point` and `unicorn/no-await-expression-member`
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -36,3 +36,5 @@ unicorn/no-useless-fallback-in-spread: WARN
 unicorn/better-regex: WARN
 unicorn/prefer-module: WARN
 unicorn/prefer-top-level-await: WARN
+unicorn/prefer-code-point: WARN
+unicorn/no-await-expression-member: WARN
