feat: Added 3 new unicorn rules
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -38,3 +38,6 @@ unicorn/prefer-module: WARN
 unicorn/prefer-top-level-await: WARN
 unicorn/prefer-code-point: WARN
 unicorn/no-await-expression-member: WARN
+unicorn/relative-url-style: WARN
+unicorn/no-useless-promise-resolve-reject: WARN
+unicorn/no-thenable: WARN
