--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -83,3 +83,16 @@ no-return-assign:
 no-use-before-define: WARN
 no-constructor-return: WARN
 no-setter-return: WARN
+no-restricted-imports:
+  - WARN
+  - paths:
+      - name: lodash
+        message: Use lodash-es
+      - name: ensure-array
+        message: Use sure-array
+      - name: "@absolunet/fsp"
+        message: Use extra-fs
+      - name: "@absolunet/fss"
+        message: Use extra-fs
+      - name: "opn"
+        message: Use open
