--- a/jest.config.json
+++ b/jest.config.json
@@ -22,5 +22,6 @@
     "^src": "<rootDir>/src",
     "^lib": "<rootDir>/src/lib"
   },
-  "verbose": false
+  "verbose": false,
+  "runner": "jest-light-runner"
 }
