--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "foreach-cli": "^1.8.1",
     "fs-extra": "^10.1.0",
     "jest": "^28.1.1",
+    "jest-light-runner": "^0.2.1",
     "js-yaml": "^4.1.0",
     "list-dir-content-size": "^0.0.5",
     "lodash-es": "^4.17.21",
