fix: Fixed wrong warning messages for rule no-restricted-imports
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -91,8 +91,8 @@ no-restricted-imports:
       - name: ensure-array
         message: Use sure-array
       - name: "@absolunet/fsp"
-        message: Use extra-fs
+        message: Use fs-extra
       - name: "@absolunet/fss"
-        message: Use extra-fs
+        message: Use fs-extra
       - name: "opn"
         message: Use open
