improve: Added pify to no-restricted-imports
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -94,5 +94,7 @@ no-restricted-imports:
         message: Use fs-extra
       - name: "@absolunet/fss"
         message: Use fs-extra
-      - name: "opn"
+      - name: opn
         message: Use open
+      - name: pify
+        message: Use util.promisify
