improve: Added new rule for execall imports
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -102,3 +102,5 @@ no-restricted-imports:
         message: Use fs-extra (more stable)
       - name: node:fs/promises
         message: Use fs-extra (more stable)
+      - name: execall
+        message: Use super-regex
