--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
   "license": "MIT",
   "dependencies": {
-    "@babel/eslint-parser": "^7.18.2",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^8.18.0",
     "eslint-plugin-import": "^2.26.0",
