feat: Added rule: no-constant-binary-expression
Signed-off-by: Jaid <jaid.jsx@gmail.com>

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -83,6 +83,7 @@ no-return-assign:
 no-use-before-define: WARN
 no-constructor-return: WARN
 no-setter-return: WARN
+no-constant-binary-expression: WARN
 no-restricted-imports:
   - WARN
   - paths:
