--- a/src/rules/unicorn.yml
+++ b/src/rules/unicorn.yml
@@ -45,3 +45,6 @@ unicorn/text-encoding-identifier-case: WARN
 unicorn/prefer-modern-math-apis: WARN
 unicorn/prefer-native-coercion-functions: WARN
 unicorn/prefer-logical-operator-over-ternary: WARN
+unicorn/prefer-blob-reading-methods: WARN
+unicorn/prefer-set-size: WARN
+unicorn/no-unnecessary-await: WARN
