Changed default quotes to backtick

--- a/src/rules/style.yml
+++ b/src/rules/style.yml
@@ -64,7 +64,7 @@ one-var: [WARN, never]
 operator-linebreak: [WARN, before]
 padding-line-between-statements: OFF
 quote-props: [WARN, as-needed]
-quotes: WARN
+quotes: [WARN, backtick]
 rest-spread-spacing: WARN
 space-before-blocks: WARN
 space-before-function-paren:
