--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0"
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
+    "eslint-plugin-import-quotes": "^0.0.1"
   },
   "devDependencies": {
     "babel-preset-jaid": "17.0.0",
