Fixed missing including

--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -4,6 +4,7 @@ plugins:
   - unicorn
   - import
   - simple-import-sort
+  - import-quotes
   - "@typescript-eslint"
 parser: '@typescript-eslint/parser'
 parserOptions:
